# Accounting

./: .gitignore  APIKey.txt.example  BUILD_WINDOWS.md  README.md  accounting.desktop  accounting.sh  main.py  pyproject.toml  requirements.txt  test_phase2.py  test_qa_strict.py
.github/workflows/: build-windows.yml
core/: ai_suggest.py  backup.py  budget.py  export.py  models.py  reminder.py  statistics.py  template.py  transaction.py
db/: connection.py  schema.py
design/: prototype.html
installer/: Accounting.spec  generate_icon.py  installer.iss
ui/: ai_panel.py  budget_panel.py  dashboard.py  main_window.py  reminder_panel.py  settings_dialog.py  template_panel.py  theme.py  transaction_dialog.py  transaction_panel.py
